src/sections/experience/ExperienceCard.css
.experienceCard {
  padding: 15px 50px;
  z-index: 3;
  position: relative;
}
.experienceCard > .title-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.experience-role{
  font-size: 1.6rem;
  color: var(--color-coral);
  font-family: var(--font-heading);
  letter-spacing: 0.04em;
  line-height: 29.9px;
}
.experience-duration{
  font-size: 1rem;
  font-family: var(--font-body);
  font-weight: 400;
  letter-spacing: 0.04em;
  line-height: 28px;
}
.company {
  font-size: 1.25rem;
  font-family: var(--font-body);
  font-weight: 400;
  letter-spacing: 0.04em;
  line-height: 28px;;
}
.experienceCard-container {
  position: relative;
}

.descriptions li {
  font-size: 1rem;
  opacity: 0.9;
}

/* Is View Container */
.isview-container {
  z-index: 10;

  display: flex;
  flex-direction: column;

  margin: 0.9rem 0;
}
.challenges-container {
  display: flex;
  flex-direction: column;

  margin: 0 auto;
  gap: 15px;

  overflow: hidden;
  padding: 10px 0;
}
.ch-link {
  color: #fff;
  display: flex;
  align-items: center;
  gap: 10px;
  transition: all 0.3s ease-in;
  font-family: var(--font-body);
}
.ch-link:hover {
  color: var(--color-coral);
}
.ch-title {
  font-size: 1.1rem;
  font-weight: 100;
}

@media (max-width: 750px) {
  .experienceCard {
    padding: 10px 15px;
    margin-top: 1.6rem;
  }
  .title-container{
    flex-direction: column;
  }
  .experience-role{
    font-size: 1.3rem;
  }
  .experience-duration{
    font-size: 0.9rem;
  }
  .company {
    font-size: 1rem;
  }

  .descriptions li {
    font-size: 0.8rem;
    margin-left: 15px;
  }
}

